travis and slack set up

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 dist: trusty
 
-# add services you need
-#services:
-#  - docker
-
 language: python
 
 # specify the python versions for which you want to run travis
@@ -21,17 +17,12 @@ script:
   # test import
   - python -c "import blueprint"
 
-  # ensure installed commands helps run successfully
-  # (add as required)
-#  - salutation --help
-#  - brief_salutation --help
-#  - a_shell_script
-
   # run unit tests
   - python -m pytest -sv --cov=blueprint --cov-fail-under=65
 
   # static type checking
   - python -m mypy blueprint
+
   # style checking
   - python -m black blueprint --check --diff --color
   - python -m flake8 --per-file-ignores="__init__.py:F401" blueprint
@@ -40,7 +31,7 @@ script:
 jobs:
   include:
     - stage: Documentation
-      python: 3.7
+      python: 3.8
       before_install: skip
       install:
         - pip install --progress-bar off -r requirements.txt
@@ -52,32 +43,15 @@ jobs:
       deploy:
         - provider: pages
           skip_cleanup: true
+          github_url: github.ibm.com
           github_token: $GITHUB_TOKEN
           # Set in the settings page of your repository, as a secure variable
           # see https://docs.travis-ci.com/user/deployment/pages/#setting-the-github-token
           local_dir: docs/_build/html
-          github_url: github.ibm.com
-          on:
-            branch: master
-    - stage: Docker
-      services: docker
-      before_install: skip
-      install: skip
-      before_script: skip
-      script:
-        # check docker build and test inside
-        - docker build -t blueprint:test .
-        - docker run --rm -t blueprint:test python -m pytest -sv
-      deploy:
-        - provider: script
-          skip_cleanup: true
-          script: bash .travis/deploy.sh
           on:
             branch: master
 
 notifications:
-  slack:
-    rooms:
-      - ibm-research:SLACK_TOKEN
+  slack: ibm-research:gDY3T1BRb0QNaUVbDEhcTQGs
     on_success: always
     on_failure: always
