make repo public and change token

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,10 @@ jobs:
         - provider: pages
           skip_cleanup: true
           #          github_url: github.ibm.com  # defaults to github.com
-          repo: adrianomartinelli/star-protocol
+          repo: AI4SCR/scQUEST
           github_url: github.com
           #          github_token: $GITHUB_TOKEN
-          github_token: $PUBLIC_GITHUB_TOKEN
+          github_token: $travis_scQUEST
           local_dir: docs/_build/html
           on:
             branch: master
