--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,9 @@ jobs:
       install:
         - pip install jupyterlab
         - pip install "git+https://github.com/AI4SCR/scQUEST.git@master"
-        - pip install umap-learn
+      #        - pip install umap-learn
       before_script:
-        - jupyter-nbconvert --to markdown --execute --output-dir ../docs/ ./tutorials/scQUEST_tutorial.ipynb
+        - jupyter-nbconvert --to markdown --output-dir ../docs/ ./tutorials/scQUEST_tutorial.ipynb
       script:
         # build documentation pages
         - cd docs && make html && cd ..
