--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ jobs:
         - pip install "git+https://github.com/AI4SCR/scQUEST.git@master"
       #        - pip install umap-learn
       before_script:
+        - jupyter-nbconvert --to markdown --output-dir docs/ ./tutorials/Custom_models.ipynb
         - jupyter-nbconvert --to markdown --output-dir docs/ ./tutorials/scQUEST_tutorial.ipynb
       script:
         # build documentation pages
