--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pandas
-torch
-scikit-learn
-numpy >= 1.2
-pytorch-lightning
-anndata
-torchmetrics
-pytorch_lightning
+pandas==1.3.5
+torch==1.11.0
+scikit-learn==1.0.2
+numpy==1.21.2
+pytorch-lightning==1.6.3
+anndata==0.7.8
+torchmetrics==0.7.0
