--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 dist: trusty
 
 language: python
-
-python:
-  - 3.8
+python: 3.8
 
 before_install: skip
 
@@ -31,6 +29,7 @@ script:
 jobs:
   include:
     - stage: Documentation
+      language: python
       python: 3.8
       before_install: skip
       install:
