add tutorial again

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ jobs:
       before_script:
         - jupyter-nbconvert --to markdown --output-dir docs/ ./tutorials/Custom_models.ipynb
         - jupyter-nbconvert --to markdown --output-dir docs/ ./tutorials/scQUEST_tutorial.ipynb
+        - jupyter-nbconvert --to markdown --output-dir docs/ ./tutorials/scQUEST_AML_tutorial.ipynb
       script:
         # build documentation pages
         - cd docs && make html && cd ..
